[gd_scene load_steps=101 format=3 uid="uid://cgpm0ob1l2fk"]

[ext_resource type="Texture2D" uid="uid://pn4qkarukjy4" path="res://Sprites/Base Body/Body/Body-Death.png" id="1_l1om2"]
[ext_resource type="Script" uid="uid://cuttvuarr51n2" path="res://player_v_2.gd" id="1_tx41p"]
[ext_resource type="Texture2D" uid="uid://urstvhs6m1mq" path="res://Sprites/Base Body/Body/Body-Falling.png" id="2_tx41p"]
[ext_resource type="Texture2D" uid="uid://5h4hjq5qubmy" path="res://Sprites/Base Body/Body/Body-Idle.png" id="3_o4wbs"]
[ext_resource type="Texture2D" uid="uid://cjxwlxl1npe6b" path="res://Sprites/Base Body/Body/Body-Jumping.png" id="4_04n4x"]
[ext_resource type="Texture2D" uid="uid://bqo0focrqpi8l" path="res://Sprites/Base Body/Body/Body-Walk.png" id="5_d6aaj"]
[ext_resource type="Texture2D" uid="uid://bcwmxfwi751id" path="res://Sprites/Base Body/Hand Front/Hand Front-Death.png" id="6_cn36e"]
[ext_resource type="Texture2D" uid="uid://cvhhmddvmfu8l" path="res://Sprites/Base Body/Hand Front/Hand Front-Falling.png" id="7_oxt27"]
[ext_resource type="Texture2D" uid="uid://4cjilspp3cdg" path="res://Sprites/Base Body/Hand Front/Hand Front-Idle.png" id="8_8n6xq"]
[ext_resource type="Texture2D" uid="uid://cin04br3xp2gv" path="res://Sprites/Base Body/Hand Front/Hand Front-Jumping.png" id="9_863qt"]
[ext_resource type="Texture2D" uid="uid://bie5v87gbl6qn" path="res://Sprites/Base Body/Hand Front/Hand Front-Walk.png" id="10_l0luv"]
[ext_resource type="Texture2D" uid="uid://udtxnithv6tq" path="res://Sprites/Base Body/Head/Head-Death.png" id="11_rlhw4"]
[ext_resource type="Texture2D" uid="uid://hsupnuu0br68" path="res://Sprites/Base Body/Head/Head-Falling.png" id="12_16hex"]
[ext_resource type="Texture2D" uid="uid://c4ubqg1xh8ik3" path="res://Sprites/Base Body/Head/Head-Idle.png" id="13_uqtqh"]
[ext_resource type="Texture2D" uid="uid://bx5y3nsjgc711" path="res://Sprites/Base Body/Head/Head-Jumping.png" id="14_6yhmq"]
[ext_resource type="Texture2D" uid="uid://but3kmdkbaigq" path="res://Sprites/Base Body/Head/Head-Walk.png" id="15_jla31"]
[ext_resource type="Texture2D" uid="uid://cwpgf8mo5ktt1" path="res://Sprites/Base Body/Hand Back/Hand Back-Death.png" id="16_krd7q"]
[ext_resource type="Texture2D" uid="uid://drcrh0aq7x0ft" path="res://Sprites/Base Body/Hand Back/Hand Back-Falling.png" id="17_v5qxm"]
[ext_resource type="Texture2D" uid="uid://xh2q45ivoxm7" path="res://Sprites/Base Body/Hand Back/Hand Back-Idle.png" id="18_x1bmc"]
[ext_resource type="Texture2D" uid="uid://c6areksv8yr6e" path="res://Sprites/Base Body/Hand Back/Hand Back-Jumping.png" id="19_bkdbn"]
[ext_resource type="Texture2D" uid="uid://xhvb4xjwjdqw" path="res://Sprites/Base Body/Hand Back/Hand Back-Walk.png" id="20_fq6xf"]
[ext_resource type="FontFile" uid="uid://e4jq22rajmsj" path="res://fonts/PixelOperator8-Bold.ttf" id="21_3082d"]
[ext_resource type="Texture2D" uid="uid://bt52pg7oxqji6" path="res://Sprites/apple.png" id="22_15mnb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r4c88"]
radius = 5.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("1_l1om2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("1_l1om2")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("1_l1om2")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("1_l1om2")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("1_l1om2")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("1_l1om2")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("1_l1om2")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oay"]
atlas = ExtResource("1_l1om2")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_04cqw"]
atlas = ExtResource("2_tx41p")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("3_o4wbs")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("3_o4wbs")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("3_o4wbs")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("3_o4wbs")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("4_04n4x")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("5_d6aaj")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("5_d6aaj")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("5_d6aaj")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("5_d6aaj")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_v568a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oay")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04cqw")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8ou"]
atlas = ExtResource("6_cn36e")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbnx"]
atlas = ExtResource("6_cn36e")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t6f"]
atlas = ExtResource("6_cn36e")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lcn"]
atlas = ExtResource("6_cn36e")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xry5e"]
atlas = ExtResource("6_cn36e")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6w8y"]
atlas = ExtResource("6_cn36e")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yem3p"]
atlas = ExtResource("6_cn36e")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_86rna"]
atlas = ExtResource("6_cn36e")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoal8"]
atlas = ExtResource("7_oxt27")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("8_8n6xq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("8_8n6xq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("8_8n6xq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("8_8n6xq")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("9_863qt")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("10_l0luv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("10_l0luv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("10_l0luv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("10_l0luv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_qjx3a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xry5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6w8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yem3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86rna")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoal8")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xg1a7"]
atlas = ExtResource("11_rlhw4")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob4mi"]
atlas = ExtResource("11_rlhw4")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax26h"]
atlas = ExtResource("11_rlhw4")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh4g0"]
atlas = ExtResource("11_rlhw4")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgmjd"]
atlas = ExtResource("11_rlhw4")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_va2xi"]
atlas = ExtResource("11_rlhw4")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkf2u"]
atlas = ExtResource("11_rlhw4")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7jk6"]
atlas = ExtResource("11_rlhw4")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0yt3"]
atlas = ExtResource("12_16hex")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("13_uqtqh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("13_uqtqh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("13_uqtqh")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("13_uqtqh")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("14_6yhmq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("15_jla31")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("15_jla31")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("15_jla31")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("15_jla31")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_sv43j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg1a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob4mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax26h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh4g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgmjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va2xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkf2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7jk6")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0yt3")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_feeoa"]
atlas = ExtResource("16_krd7q")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nxt"]
atlas = ExtResource("16_krd7q")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym00c"]
atlas = ExtResource("16_krd7q")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee2o4"]
atlas = ExtResource("16_krd7q")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vie4p"]
atlas = ExtResource("16_krd7q")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jj5r"]
atlas = ExtResource("16_krd7q")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_77e46"]
atlas = ExtResource("16_krd7q")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy2ki"]
atlas = ExtResource("16_krd7q")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc53x"]
atlas = ExtResource("17_v5qxm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("18_x1bmc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("18_x1bmc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("18_x1bmc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("18_x1bmc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uyv"]
atlas = ExtResource("19_bkdbn")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("20_fq6xf")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("20_fq6xf")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("20_fq6xf")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("20_fq6xf")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_fdu0r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_feeoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym00c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee2o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vie4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jj5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77e46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy2ki")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc53x")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uyv")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="player_v2" type="CharacterBody2D"]
z_index = 2
safe_margin = 0.14
script = ExtResource("1_tx41p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 8
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_r4c88")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v568a")
animation = &"fall"
autoplay = "idle"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qjx3a")
animation = &"fall"
autoplay = "idle"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sv43j")
animation = &"fall"
autoplay = "idle"

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fdu0r")
animation = &"fall"
autoplay = "idle"

[node name="die_timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="die_txt" type="Label" parent="."]
visible = false
offset_left = -34.0
offset_top = -4.0
offset_right = 40.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(0.48235294, 0.05882353, 0.12156863, 1)
theme_override_fonts/font = ExtResource("21_3082d")
theme_override_font_sizes/font_size = 8
text = "You   died"

[node name="apple" type="Sprite2D" parent="."]
visible = false
position = Vector2(3.9999998, 1.9999999)
texture = ExtResource("22_15mnb")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -20)
zoom = Vector2(5, 5)
limit_enabled = false
limit_left = -240
limit_top = -215
limit_right = 4025
limit_bottom = 75
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 4.0

[node name="raycast" type="Node2D" parent="."]

[node name="left_ray" type="RayCast2D" parent="raycast"]
target_position = Vector2(-14, 0)

[node name="right_ray" type="RayCast2D" parent="raycast"]
target_position = Vector2(14, 0)

[node name="bottom_ray" type="RayCast2D" parent="raycast"]
target_position = Vector2(0, 65)

[connection signal="timeout" from="die_timer" to="." method="_on_die_timer_timeout"]
